<resources>
    <string name="app_name">Pietų programėlė</string>

    <string name="login_username">Vartotojo vardas</string>
    <string name="login_password">Slaptažodis</string>
    <string name="login_submit_log">Prisijungti</string>
    <string name="login_submit_reg">Registruotis</string>
    <string name="login_remember">Prisiminti mane</string>
    <string name="login_username_error">Vartotojo vardas neteisingas</string>
    <string name="login_password_error">Slaptažodis neteisingas</string>

    <string name="register">Registracija</string>
    <string name="register_email">El.Paštas</string>
    <string name="register_confPasw">Patvirtinti slpatažodį</string>
    <string name="register_passwordMatch_error">Slaptažodžiai nesutampa</string>
    <string name="register_password_error">Slaptažodį gali sudaryti mažosios ir didžiosios raidės, nuo 5 iki 20 simbolių, specialūs symboliai (.!@_)</string>
    <string name="register_username_error">Vartotojo vardą gali sudaryti mažosios ir didžiosios raidės, nuo 3 iki 20 simbolių</string>
    <string name="register_email_error">Neteisingas el.paštas</string>

    <string name="search_btn">Ieškoti</string>
    <string name="search_hint">Įrašykite raktažodį</string>

    <string name="add_offer">+</string>
    <string name="soup">Sriuba</string>
    <string name="main">Pagrindinis</string>
    <string name="salad">Salotos</string>
    <string name="title">Pavadinimas</string>
    <string name="payment">Apmokėjimas</string>
    <string name="dinnerType">Pietų tipas</string>
    <string name="deliver">Pristatymas</string>
    <string name="yes">Taip</string>
    <string name="no">Ne</string>
    <string name="price">Kaina</string>
    <string name="add_submit">Pridėti</string>
    <string name="add_new">Pridėti naują</string>
    <string name="empty_title">Privaloma įrašyti pavadinimą</string>
    <string name="empty_price">Privaloma įrašyti kainą</string>

    <string name="new_offer_database_info">Įrašas keliamas į duomenų bazę</string>
    <string name="URL_DATABASE">https://dinnerappkitm.000webhostapp.com/db.php</string>
</resources>
