<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dinnerType"
                />
            <CheckBox
                android:id="@+id/checkbox_soup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soup"
                />
            <CheckBox
                android:id="@+id/checkbox_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main"
                />
            <CheckBox
                android:id="@+id/checkbox_salad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salad"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deliver"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioBtn_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    />
                <RadioButton
                    android:id="@+id/radioBtn_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    />
            </RadioGroup>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                />
            <Spinner
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <Button
                android:id="@+id/submit"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/add_submit"
                android:background="@color/background2"
                android:layout_marginLeft="10dp"
                android:textColor="@color/btn_text"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>