<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/text_view_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="50dp"
        android:text="@string/register" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/conf_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_confPasw"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/login_submit_reg"
            android:background="@color/background2"
            android:layout_marginLeft="10dp"
            android:textColor="@color/btn_text"
            />
    </LinearLayout>

</LinearLayout>