<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    >

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:layout_marginBottom="5dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/login_submit_log"
            android:background="@color/background2"
            android:layout_marginRight="10dp"
            android:textColor="@color/btn_text"
            />
        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/login_submit_reg"
            android:background="@color/background2"
            android:layout_marginLeft="10dp"
            android:textColor="@color/btn_text"
            />
    </LinearLayout>
</LinearLayout>