<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".SearchActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:hint="@string/search_hint"
            />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@color/background2"
            android:text="@string/search_btn"
            android:textColor="@color/btn_text" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/add"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_btn"
            android:text="@string/add_offer"
            android:textColor="@color/white"
            android:textSize="36dp" />
    </RelativeLayout>



</LinearLayout>


